--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,36 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+}
+
+p {
+  padding: 30px;
+}
+
+:root {
+  --blue: #69a0ef;
+}
+
 td {
   border: 1px solid black;
+}
+header {
+  background: var(--blue);
+  display: flex;
+  justify-content: center;
+}
+
+header * {
+  color: white;
+}
+
+table{
+  margin: 0 20%;
+  border: 3px solid black;
 }
